<resources>
    <string name="app_name">Kamikaze Muay Thai Ecuador</string>

    <!-- Home -->
    <string name="home_novedades_title">🔥 Novedades</string>
    <string name="home_novedades_desc">¡Inscripciones abiertas para el nuevo ciclo de entrenamiento intensivo! Mejora tu técnica y condición física.</string>
    <string name="home_evento_title">📅 Próximo Evento</string>
    <string name="home_evento_desc">Campeonato Nacional de Muay Thai en el Coliseo de los Quitus, Quito - Ecuador, Fecha: 7 de marzo 2026. ¡No te lo pierdas!</string>

    <!-- School -->
    <string name="school_title">Nuestra Escuela</string>
    <string name="school_credo_title">Credo Kamikaze</string>
    <string name="school_credo_desc"><![CDATA[<ul><li>Amistad y prosperidad mutua.</li><li>Lo simple y lo básico, es la esencia de todo.</li><li>Desarrollar las cualidades humanas, a la par de las habilidades físicas.</li><li>Pensar cada palabra antes de pronunciarla.</li><li>Estudiar la defensa personal como causa interna y luego como efecto externo.</li><li>Respetar al oponente y ganarse el respeto de el: la finalidad es ser todos amigos.</li><li>No tomarse en serio las victorias o derrotas en competencias deportivas.</li><li>Vencer cuando es justo vencer y perder cuando es justo perder.</li><li>Todo tiene un precio, menos nuestra etica, moral y lealtad. Ganate las cosas respetando los procesos, tiempos y cumpliendo las reglas.</li><li>Nadie está más vacío que aquel que está lleno de sí mismo: no dejes que tu ego te domine.</li><li>Acuerdate de donde saliste y que ahi siempre puedes volver, acuerdate de como llegaste y a costillas de quien. Respeta y valora a tu maestro y a tu dojo.</li></ul><br/>Yo kamikaze siempre, no solo cuando me conviene.]]></string>
    <string name="school_instructor_title">Instructor</string>
    <string name="school_instructor_name">Miguel Angel Mendoza (14° Khan)</string>
    <string name="school_instructor_master">Arjarn (Master)</string>
    <string name="school_instructor_desc">Con una trayectoria de excelencia formando guerreros y campeones en el arte de las 8 extremidades.</string>

    <!-- Locations -->
    <string name="locations_title">Nuestras Sedes</string>
    <string name="locations_click_details">Click para ver detalles</string>

    <!-- Classes -->
    <string name="classes_title">Horarios</string>
    <string name="classes_morning_title">🌞 Mañana (Lun-Vie)</string>
    <string name="classes_morning_1">07:00 AM - 08:00 AM</string>
    <string name="classes_morning_2">08:00 AM - 09:00 AM</string>
    <string name="classes_morning_3">09:00 AM - 10:00 AM</string>
    <string name="classes_afternoon_title">⛅ Tarde (Lun-Vie)</string>
    <string name="classes_afternoon_1">04:00 PM - 05:00 PM</string>
    <string name="classes_afternoon_2">05:00 PM - 06:00 PM</string>
    <string name="classes_night_title">🌙 Noche (Lun-Vie)</string>
    <string name="classes_night_1">06:00 PM - 07:00 PM</string>
    <string name="classes_night_2">07:00 PM - 08:00 PM</string>

    <!-- Contact -->
    <string name="contact_title">Contáctanos</string>
    <string name="contact_location_title">📍 Ubicación</string>
    <string name="contact_location_desc">Av. Napo y Alpahuasi, Quito, Ecuador</string>
    <string name="contact_phone_title">📞 Teléfono</string>
    <string name="contact_phone_desc">+593 98 447 0526</string>
    <string name="contact_email_title">✉️ Email</string>
    <string name="contact_email_desc">kamikazeartesmarciales@gmail.com</string>

    <!-- Bottom Navigation -->
    <string name="bottom_nav_home">Inicio</string>
    <string name="bottom_nav_school">Escuela</string>
    <string name="bottom_nav_locations">Sedes</string>
    <string name="bottom_nav_classes">Horarios</string>
    <string name="bottom_nav_contact">Contacto</string>
    <string name="kamikaze_logo_desc">Kamikaze Logo</string>
</resources>
