<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/bottom_nav_home" />
    <item
        android:id="@+id/navigation_school"
        android:icon="@drawable/ic_school_black_24dp"
        android:title="@string/bottom_nav_school" />
    <item
        android:id="@+id/navigation_locations"
        android:icon="@drawable/ic_location_on_black_24dp"
        android:title="@string/bottom_nav_locations" />
    <item
        android:id="@+id/navigation_classes"
        android:icon="@drawable/ic_access_time_black_24dp"
        android:title="@string/bottom_nav_classes" />
    <item
        android:id="@+id/navigation_contact"
        android:icon="@drawable/ic_email_black_24dp"
        android:title="@string/bottom_nav_contact" />
</menu>
